waitlist and others